Sat Jan 11 06:32:19 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Sun C++ seems to explicitly need Crun now.

Sat Jan 11 02:23:06 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Fix checks for Sun C++.

Fri Jan 10 22:38:01 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: timer_create() doesn't handle CLOCK_MONOTONIC
	  on Solaris, so use CLOCK_REALTIME there instead.

Fri Jan 10 11:22:37 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Improve handling of Sun's C++ compiler - trick libtool
	  into not adding -library=Cstd, and prefer -library=stdcxx4 if
	  supported.

Fri Jan 10 11:16:15 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add XAPIAN_TEST_CXXFLAGS macro, and use it to check
	  the flags to cxx actually work.

Fri Jan 10 10:56:17 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Apply missing functional part of previous change.

Fri Jan 10 10:46:53 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Avoid using grep -e as /usr/bin/grep on Solaris
	  doesn't support it.

Fri Jan 10 03:30:10 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Whitespace tweak.

Thu Jan 09 11:06:05 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.h,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,
	  backends/chert/chert_databasereplicator.cc,
	  backends/inmemory/inmemory_database.h,common/log2.h,
	  common/realtime.h,matcher/multimatch.cc,weight/pl2weight.cc,
	  weight/tradweight.cc: Fix compilations issues with Sun's C++
	  compiler (mostly missing library headers).

Thu Jan 09 06:00:03 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Skip absent lazily created tables in the case
	  where out == NULL too.

Thu Jan 09 05:31:40 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Use Xapian::Database::check() in cursordelbug1.
	  (partly addresses #238)
