@@ -1,7 +1,7 @@
 /** @file io_utils.cc
  * @brief Wrappers for low-level POSIX I/O routines.
  */
-/* Copyright (C) 2006,2007,2008,2009,2011 Olly Betts
+/* Copyright (C) 2004,2006,2007,2008,2009,2011,2014 Olly Betts
  * Copyright (C) 2010 Richard Boulton
  *
  * This program is free software; you can redistribute it and/or modify
@@ -30,6 +30,21 @@
 #include <string>
 
 #include <xapian/error.h>
+
+#include "noreturn.h"
+#include "str.h"
+
+// Trying to include the correct headers with the correct defines set to
+// get pread() and pwrite() prototyped on every platform without breaking any
+// other platform is a real can of worms.  So instead we probe for what
+// prototypes (if any) are required in configure and put them into
+// PREAD_PROTOTYPE and PWRITE_PROTOTYPE.
+#if defined HAVE_PREAD && defined PREAD_PROTOTYPE
+PREAD_PROTOTYPE
+#endif
+#if defined HAVE_PWRITE && defined PWRITE_PROTOTYPE
+PWRITE_PROTOTYPE
+#endif
 
 bool
 io_unlink(const std::string & filename)
@@ -77,4 +92,78 @@ io_write(int fd, const char * p, size_t n)
 	p += c;
 	n -= c;
     }
+}
+
+XAPIAN_NORETURN(
+	static void throw_block_error(const char * s, off_t b, int e = 0));
+static void
+throw_block_error(const char * s, off_t b, int e)
+{
+    std::string m = s;
+    m += str(b);
+    throw Xapian::DatabaseError(m, e);
+}
+
+void
+io_read_block(int fd, char * p, size_t n, off_t b)
+{
+    off_t o = b * n;
+#ifdef HAVE_PREAD
+    while (n) {
+	ssize_t c = pread(fd, p, n, o);
+	if (c <= 0) {
+	    if (c == 0)
+		throw_block_error("EOF reading block ", b);
+	    if (errno == EINTR) continue;
+	    throw_block_error("Error reading block ", b, errno);
+	}
+	p += c;
+	n -= c;
+	o += c;
+    }
+#else
+    if (rare(lseek(fd, o, SEEK_SET) == off_t(-1)))
+	throw_block_error("Error seeking to block ", b, errno);
+    while (n) {
+	ssize_t c = read(fd, p, n);
+	if (c <= 0) {
+	    if (c == 0)
+		throw_block_error("EOF reading block ", b);
+	    if (errno == EINTR) continue;
+	    throw_block_error("Error reading block ", b, errno);
+	}
+	p += c;
+	n -= c;
+    }
+#endif
+}
+
+void
+io_write_block(int fd, const char * p, size_t n, off_t b)
+{
+    off_t o = b * n;
+#ifdef HAVE_PWRITE
+    while (n) {
+	ssize_t c = pwrite(fd, p, n, o);
+	if (c < 0) {
+	    if (errno == EINTR) continue;
+	    throw_block_error("Error writing block ", b, errno);
+	}
+	p += c;
+	n -= c;
+	o += c;
+    }
+#else
+    if (rare(lseek(fd, o, SEEK_SET) == off_t(-1)))
+	throw_block_error("Error seeking to block ", b, errno);
+    while (n) {
+	ssize_t c = write(fd, p, n);
+	if (c < 0) {
+	    if (errno == EINTR) continue;
+	    throw_block_error("Error writing block ", b, errno);
+	}
+	p += c;
+	n -= c;
+    }
+#endif
 }
