@@ -1,7 +1,7 @@
 /** @file io_utils.h
  * @brief Wrappers for low-level POSIX I/O routines.
  */
-/* Copyright (C) 2006,2007,2008,2009,2011 Olly Betts
+/* Copyright (C) 2006,2007,2008,2009,2011,2014 Olly Betts
  * Copyright (C) 2010 Richard Boulton
  *
  * This program is free software; you can redistribute it and/or modify
@@ -73,6 +73,12 @@ size_t io_read(int fd, char * p, size_t n, size_t min);
 
 /** Write n bytes from block pointed to by p to file descriptor fd. */
 void io_write(int fd, const char * p, size_t n);
+
+/// Read block b size n bytes into buffer p from file descriptor fd.
+void io_read_block(int fd, char * p, size_t n, off_t b);
+
+/// Write block b size n bytes from buffer p to file descriptor fd.
+void io_write_block(int fd, const char * p, size_t n, off_t b);
 
 /** Delete a file.
  *
